@@ -1,4 +1,5 @@
 3.2
+ * Add compressor name in sstablemetadata output (CASSANDRA-9879)
  * Fix type casting for counter columns (CASSANDRA-10824)
  * Prevent running Cassandra as root (CASSANDRA-8142)
  * bound maximum in-flight commit log replay mutation bytes to 64 megabytes (CASSANDRA-8639)
